--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@
 }
 
 @layer base {
+  html, body {
+    scroll-behavior: smooth;
+  }
+
   /* Chrome, Edge, and Safari */
   ::-webkit-scrollbar {
     width: 8px; /* This sets the width */
@@ -62,11 +66,29 @@
  h1 {
   @apply font-semibold text-center
  }
+ .title {
+  @apply text-3xl font-bold text-center text-slate-950 dark:text-white;
+ }
+ .title-string {
+  @apply text-center max-w-3xl text-center sm:px-5 text-zinc-500 dark:text-zinc-400 mb-7 mt-2
+ }
  .tooltip {
-  @apply absolute cursor-pointer left-1/2 -translate-x-1/2 ml-2 -bottom-8 bg-slate-300 text-slate-950 dark:bg-slate-800 dark:text-white text-xs rounded-md px-2 py-1 whitespace-nowrap opacity-0 pointer-events-none transition-opacity group-hover:opacity-100;
+  @apply absolute cursor-pointer left-1/2 -translate-x-20 ml-2 -bottom-8 bg-slate-300 text-slate-950 dark:bg-slate-800 dark:text-white text-xs rounded-md px-2 py-1 whitespace-nowrap opacity-0 pointer-events-none transition-opacity group-hover:opacity-100;
  }
  .subtitle {
   @apply text-gray-700 font-[600] text-center dark:text-gray-300;
+ }
+ .high-contrast {
+  @apply text-black dark:text-white;
+ }
+ .md-contrast {
+  @apply text-gray-800 dark:text-gray-200;
+ }
+ .shadow-question {
+  box-shadow: inset 0px 0px 40px rgba(81, 136, 237, 0.087), 1px 1px 10px #516bed60;
+ }
+ .loader-div {
+  @apply w-3 h-3 bg-gray-400 rounded-full;
  }
 }
 
@@ -130,5 +152,46 @@
   100% {
     left: 85%;
     background: var(--color-amber-500);
+  }
+}
+
+.calendly-popup-content {
+  border-radius: 16px !important;
+  overflow: hidden;
+}
+
+/* Optional: Style the backdrop */
+.calendly-overlay {
+  backdrop-filter: blur(4px);
+}
+
+/* Optional: Add shadow */
+.calendly-popup-content {
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25) !important;
+}
+
+.scrollable::-webkit-scrollbar {
+  display: none;
+}
+  /* for the carousel animation  */
+  .sider-container {
+    overflow: hidden;
+  }
+  .slider {
+    animation: carouselAnimation 15s linear infinite;
+  }
+ @media (hover:hover) {
+    .slider-container:hover .slider{
+      animation-play-state: paused;
+    }
+ }
+
+
+@keyframes carouselAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
   }
 }
