--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,15 @@
 @layer base {
   html, body {
     scroll-behavior: smooth;
+    /* overscroll-behavior-y: none; */
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+
+  @media (max-width: 576px) and (pointer: coarse) {
+    html, body {
+      overscroll-behavior-y: none;
+    }
   }
 
   /* Chrome, Edge, and Safari */
@@ -70,13 +79,13 @@
   @apply text-3xl font-bold text-center text-slate-950 dark:text-white;
  }
  .title-string {
-  @apply text-center max-w-3xl text-center sm:px-5 text-zinc-500 dark:text-zinc-400 mb-7 mt-2
+  @apply text-center max-w-3xl sm:px-5 text-zinc-500 dark:text-zinc-400 mb-7 mt-2
  }
  .tooltip {
   @apply absolute cursor-pointer left-1/2 -translate-x-20 ml-2 -bottom-8 bg-slate-300 text-slate-950 dark:bg-slate-800 dark:text-white text-xs rounded-md px-2 py-1 whitespace-nowrap opacity-0 pointer-events-none transition-opacity group-hover:opacity-100;
  }
  .subtitle {
-  @apply text-gray-700 font-[600] text-center dark:text-gray-300;
+  @apply text-gray-700 font-semibold text-center dark:text-gray-300;
  }
  .high-contrast {
   @apply text-black dark:text-white;
@@ -89,6 +98,9 @@
  }
  .loader-div {
   @apply w-3 h-3 bg-gray-400 rounded-full;
+ }
+ footer {
+  box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.2);
  }
 }
 
@@ -195,3 +207,4 @@
     transform: translateX(-50%);
   }
 }
+
